welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if(message="A"){
              ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
    else if(message="B"){
                   ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
    	else if(message="C"){
                       ^